Bug 504067 - kioworker/thumbnail.so uses 100% CPU from startup
Summary: kioworker/thumbnail.so uses 100% CPU from startup
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.13.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-11 17:16 UTC by Enrico Ronconi
Modified: 2026-02-11 09:16 UTC (History)
24 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.24
Sentry Crash Report:


Attachments
3MF Problematic file (137.58 KB, application/octet-stream)
2025-05-13 16:59 UTC, Enrico Ronconi
Details
3mf files exported from fusion360 (377.92 KB, application/gzip)
2025-05-14 21:51 UTC, Chritoph
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Enrico Ronconi 2025-05-11 17:16:44 UTC
(Previously posted on https://discuss.kde.org/t/investigating-thumbnail-so-kioworker-100-cpu/34067/1 )

STEPS TO REPRODUCE
1. Boot my laptop
2. Login to plasma with my user
3. Open Konsole and execute “top”

OBSERVED RESULT

/usr/lib/kf6/kioworker /usr/lib/qt6/plugins/kf6/kio/thumbnail.so thumbnail  local:/run/user/1000/plasmashellDMLlBQ.4.kioworker.socket

Uses 100% of CPU until is manually killed by user (me)

EXPECTED RESULT

No high-cpu usage from any process

SETUP
- KDE startup configured to “new session” (do not re-open apps)
- Dolphin thumbnails disabled (i.e., all checkbox unticked under “Thumbnail” tab in Dolphin config)
- KDE file indexing disabled

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 6850U with Radeon Graphics
Memory: 30.1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 leadrdrk 2025-05-13 07:01:17 UTC
I've also been experiencing this problem, although I have not seen it happening right on startup (probably because my desktop is completely empty). What triggers it for me is navigating around folders with images in Dolphin. The `/usr/lib/kf6/kioworker /usr/lib/qt6/plugins/kf6/kio/thumbnail.so` process will spawn and stay there, constantly consuming 8% of CPU usage and draining my laptop battery faster than normal, not closing itself unless I kill it myself.

This has been happening for a while, and while I didn't pay attention to when it started occurring, I'll make an educated guess that this started happening on KDE Framework version 6.13.x (but take that with a pinch of salt).

So to summarize the reproduction steps:
1. Open Dolphin
2. Navigate around directory with images
3. Observe the kioworker process launching and constantly hogging the CPU

System info:
Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 7.1 GiB of RAM
Graphics Processor 1: AMD Radeon Graphics
Graphics Processor 2: AMD Radeon RX 5500M
Comment 2 Akseli Lahtinen 2025-05-13 12:49:47 UTC
I can confirm this is happening. With some images, the thumbnailer seems to get upset by something and keeps logging `qt.gui.imageio: libpng warning: iCCP: known incorrect sRGB profile`

Do you get the same logs if you start Dolphin inside a terminal?
Comment 3 Akseli Lahtinen 2025-05-13 13:43:04 UTC
Can you tell me about the file structure a bit too:

Do you have multiple folders in one view with multiple image files inside of them? Or any other items that can potentially have thumbnails?
Comment 4 Akseli Lahtinen 2025-05-13 13:46:43 UTC
One more question, what filetypes are they?
Comment 5 Enrico Ronconi 2025-05-13 16:59:13 UTC
Created attachment 181247 [details]
3MF Problematic file

This 3MF file causes kioworker/thumbnail to stuck with 100% CPU Usage. File was previously downloaded from internet. Download at your own risk.
Comment 6 Enrico Ronconi 2025-05-13 16:59:39 UTC
(In reply to Akseli Lahtinen from comment #4)
> One more question, what filetypes are they?

In my case, I've found that the problematic file is a ".3mf" (3D manufacturing) file that I had on Desktop (that's explains why I had problem "on boot"). Dolphin shows others 3mf files correctly, so I think there is something wrong with this specific one.

3mf is indeed a ZIP file with some metadata, 3D model, and a PNG preview "thumbnail.png". I'm pretty sure Dolphin shows this thumbnail.png as the actual preview. This also would explain why the preview is shown despite only "GIF/PNG" preview is ticked in Dolphin.

However, If I extract this thumbnail.png, Dolphin has no problem with its preview.

I've now attached the file in the report. I'VE DOWNLOADED THE 3MF FILE FROM INTERNET, so I can not guarantee it does not contain some 0-day exploit from NSA, but seems fine to me.
Comment 7 leadrdrk 2025-05-14 03:52:13 UTC
In my case, after investigating for a while, I found out that the images were only a red herring. I was going back to my Home folder to navigate between the different folders with images, which is what actually triggered it. So, now that I know that's the case, I opened Dolphin on my home folder, then looked at the kioworker process's open file descriptors. I quickly narrowed it down to an .exe file of a game made in Godot, that was in a folder inside my Home folder. And sure enough, when I opened Dolphin on that exact folder, the same thing happened. I do have icoutils installed and I do expect Dolphin to generate thumbnails for my Windows .exe files.

The game is publicly available, but just to be sure, I've uploaded the exact version that I currently have: https://pixeldrain.com/u/9sMf3SST (file is too big for bugzilla)

This might be a different issue (or an issue with a different component) with the same symptoms.
Comment 8 Akseli Lahtinen 2025-05-14 08:09:40 UTC
Thanks for the information! 

I have not been able to reproduce the exact symptoms after all I'm afraid.. :/ 
For me they create the thumbnail and the worker stops. It stays on though, but with 0% usage.

What I am not sure is if should it stay up and running. I will have to ask around. I guess it makes sense we don't create a new
runner every single time and just use the old one.

But no 100% usage spiking yet with these two files.
Comment 9 sunrise.duan 2025-05-14 08:47:10 UTC
I have the same issue after I got a 3D printer. After I create a tar for all my 3mf files and then remove them, the CPU usage has become lower. Then I extract the tar, the problem is not reproduced, weired.
Comment 10 Chritoph 2025-05-14 21:51:06 UTC
Created attachment 181310 [details]
3mf files exported from fusion360

this tarball contains both a normally behaving and a problematic 3mf. both were exported from the same fusion360 project. (although at different stages of creating the project and containing different components)

the problematic one triggers the bug as soon as i extract the file on the desktop from then on it also bugs on startup. 
I also tested it on my other laptop, and both files behaved the exact same way. I therefore believe that the error is file specific which is why I added a working 3mf file for comparison.

I can eliminate arch as the culprit since I am using aurora (a custom fedora kinoite image) . And my other laptop is intel based, so AMD isn't a common factor in this either.

system infos:
Operating System: Aurora 42
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.3-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 PRO 7540U w/ Radeon 740M Graphics
Memory: 30,0 GiB of RAM
Graphics Processor: AMD Radeon 740M
Manufacturer: LENOVO
Product Name: 21F8CTO1WW
System Version: ThinkPad T14s Gen 4

Same behaviour with exact same OS and software versions but this hardware:

Processors: 16 × 12th Gen Intel® Core™ i7-1260P
Memory: 31.0 GiB of RAM
Graphics Processor: Intel® Iris® Xe Graphics
Manufacturer: LG Electronics
Product Name: 17Z90Q-G.AD7CG
System Version: 0.1
Comment 11 Marcool 2025-05-17 10:33:07 UTC
Hi all.

Just to not that I also have just noticed this issue, but I can't narrow it down to any specific file, but I do know it's unlikely to be caused by a 3mf file on my end as I have confirmed I have none  (at least not judging by extension; I might have if I check headers perhaps?! but I don't use fusion360 though),. I do however have a bunch of exe files:

[root@t480 ~]# fd -e 3mf --exclude '.snapshots' --no-ignore --hidden '.*' / | wc -l 
0
[root@t480 ~]# fd -e exe --exclude '.snapshots' --no-ignore --hidden '.*' / | wc -l 
197

I have however verified that downloading the problematic 3MF file from this bug and opening Dolphin triggers the high CPU usage on kioworker /usr/lib/qt6/plugins/kf6/kio/thumbnail.so which only stops if I kill the process.

System information:

Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.5-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 15,4 GiB of RAM
Graphics Processor: Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 20L6S8FB00
System Version: ThinkPad T480
Comment 12 Jerome 2025-05-19 02:23:06 UTC
I have met the same issue. 
Steps to reproduce:
1. Open Dolphin
2. Force delete some files with "shift + del"
3. A high CPU usage process with name "kioworker" will keep on running until I close the Dolphin.
Comment 13 TraceyC 2025-05-20 15:40:01 UTC
Setting back to confirmed, since Akseli was able to reproduce
Comment 14 zxvb12z 2025-05-21 14:17:42 UTC
I also encountered this problem.It is reproduced in the current KDE beta version.  I also have no 3mf files, this probably affects other file formats as well.

Operating System: Arch Linux / Manjaro
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14
Qt Version: 6.9.0
Kernel Version: 6.14.7
FS: btrfs and bcachefs
Graphics Platform: Wayland
Comment 15 Robert Spillner 2025-05-22 15:36:21 UTC
I'm also hit by this bug. It seems to occur when thumbnail.so cannot successfully generate a thumbnail. In my case this always starts with dolphin running and thumbnail.so tries to generate thumbnails on encrypted pdf- or odt-files where it cannot access the content.
Comment 16 Akseli Lahtinen 2025-06-04 12:28:25 UTC
Sadly I can't still repro this for some reason. I used encrypted odt and pdf files, but when it fails it stops trying. Even the problematic file in the zip given earlier did not cause thumbnailer to get stuck.
Comment 17 Akseli Lahtinen 2025-06-04 12:29:08 UTC
Forgot to add, I thought I had this earlier, but it was not related to this.
Comment 18 zxvb12z 2025-06-04 12:46:02 UTC
Unfortunately I can’t tell which file causes this (because it happens on a disk partition with a lot of different files, but there are no encrypted files), but it still happens in my system.

But I can say that the problem is related to the creation of thumbnails for folders, if you disable this function in the  Dolphin settings everything will work properly

KDE Plasma Version: 6.3.91
KDE Frameworks Version: 6.14
Qt Version: 6.9.1
Kernel Version: 6.15
FS: btrfs and bcachefs
Graphics Platform: Wayland
Comment 19 Akseli Lahtinen 2025-06-04 13:22:00 UTC
(In reply to orangeanatola from comment #18)
> Unfortunately I can’t tell which file causes this (because it happens on a
> disk partition with a lot of different files, but there are no encrypted
> files), but it still happens in my system.
> 
> But I can say that the problem is related to the creation of thumbnails for
> folders, if you disable this function in the  Dolphin settings everything
> will work properly
> 
> KDE Plasma Version: 6.3.91
> KDE Frameworks Version: 6.14
> Qt Version: 6.9.1
> Kernel Version: 6.15
> FS: btrfs and bcachefs
> Graphics Platform: Wayland

What filesystem does this partition use? Is your home directory (~/.cache in particular) in different partition than the files?
Comment 20 zxvb12z 2025-06-04 13:31:15 UTC
> What filesystem does this partition use? Is your home directory (~/.cache in
> particular) in different partition than the files?

my root  and the partition where this problem occurs are both on btrfs
yes,  in different partition
Comment 21 zxvb12z 2025-06-04 13:57:09 UTC
It seems I was wrong, the problem in my particular case is causing the creation of a thumbnail not for folders but for specific windows exe
In fact it seems to concern only one exe of all that I have, because this does not happen on other partition.
Unfortunately I cannot send you this file for verification. Maybe other users who have encountered this problem will be able to provide you with a file for checking.

in case you want to check which file format is causing problems for you - go to the dolphin settings, select create thumbnail, disable all, click apply, close dolphin. Now enable creating thumbnails for each format, then click apply, close dolphin and check until you find the right format.
important after each format is enabled to restart dolphin. 
Hope this can help
Comment 22 Akseli Lahtinen 2025-06-12 08:59:33 UTC
(In reply to orangeanatola from comment #21)
> It seems I was wrong, the problem in my particular case is causing the
> creation of a thumbnail not for folders but for specific windows exe
> In fact it seems to concern only one exe of all that I have, because this
> does not happen on other partition.

Can you tell me more details of this exe file?
- Is it on NTFS disk?
- How large is the exe file?
- Does the exe itself contain images? (Some exe files have images bundled within them when built)
Comment 23 zxvb12z 2025-06-13 15:02:33 UTC
> Can you tell me more details of this exe file?
> - Is it on NTFS disk?
> - How large is the exe file?
> - Does the exe itself contain images? (Some exe files have images bundled
> within them when built)

It was a game on the Godot game engine. Build in one exe file with all resources. Although I can’t send you the file, I will try to give you any information I can.
1) No
2) ~ 264 Mib
3) I think yes.
Comment 24 zxvb12z 2025-06-13 15:42:17 UTC
I have extracted the contents of this exe with GDRE_tools , unfortunately it did not help, the recovered files do not cause problems by themselves, now I try to find any other game on Godot that would cause such behavior
Comment 25 zxvb12z 2025-06-13 16:03:57 UTC
At least it didn’t take me too long. This game  (windows) version causes the same problem, I hope the publication of links here is not forbidden. In any case you don’t need to run it, just go to the folder with the downloaded file. 

https://wrenchtype.itch.io/puzzles-house
Comment 26 Akseli Lahtinen 2025-06-16 12:40:44 UTC
I only managed to reproduce this in an Arch VM. I still am not sure why exactly, but this does tell me that we need to add a timeout to the previewjob at the very least.
Comment 27 Bug Janitor Service 2025-06-16 12:41:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1914
Comment 28 Akseli Lahtinen 2025-06-16 12:46:14 UTC
I noticed that with the 3mf file, something keeps investigating the file for the thumbnail forever. 

Similar thing happens with the window exe files.

So I think this is something that needs to be fixed case-by-case per plugin. Alternatively we throw our plugins into bin and use de-facto-standardized thumbnailers.

Both require bunch of work. But at least with the timeout fix we can avoid the plugins to hang around forever, eating CPU.
Comment 29 TraceyC 2025-06-18 21:11:10 UTC
Since the MR was closed without being merged, I'm setting back to CONFIRMED
Comment 30 flex 2025-07-08 05:49:33 UTC
Still got this on Gentoo, kio version 6.13.0, after disabled "Show Previews" in Dolphi, everything is OK
Comment 31 Joe Breuer 2025-10-16 10:20:03 UTC
I ran into this yesterday, "using Dolphin in a directory with an .exe file of a game created with Godot game engine" fits perfectly.

This is (also) on gentoo, kio 6.16.0-r1.

In my case, the busy-running kioworker processes with the thumbnail.so plugin (I had two of those) prevented my laptop from suspending, which made the situation somewhat more serious/urgent for me than "oh there's some runaway process, I'll look at that later when I have time."

This seems to be related to the kioworkers running on files mounted via ntfs-3g/fuse:

Oct 15 17:37:03 mercury kernel: Freezing user space processes
Oct 15 17:37:03 mercury kernel: Freezing user space processes failed after 20.001 seconds (2 tasks refusing to freeze, wq_busy=0):
Oct 15 17:37:03 mercury kernel: task:kioworker       state:D stack:0     pid:37948 tgid:37948 ppid:4073   flags:0x00004006
Oct 15 17:37:03 mercury kernel: Call Trace:
Oct 15 17:37:03 mercury kernel:  <TASK>
Oct 15 17:37:03 mercury kernel:  __schedule+0x446/0xb80
Oct 15 17:37:03 mercury kernel:  schedule+0x21/0xf0
Oct 15 17:37:03 mercury kernel:  request_wait_answer+0xcb/0x2a0 [fuse]
Oct 15 17:37:03 mercury kernel:  ? __pfx_autoremove_wake_function+0x10/0x10
Oct 15 17:37:03 mercury kernel:  __fuse_simple_request+0xce/0x280 [fuse]
Oct 15 17:37:03 mercury kernel:  fuse_do_getattr+0x208/0x310 [fuse]
Oct 15 17:37:03 mercury kernel:  fuse_file_read_iter+0xb5/0x1f0 [fuse]
Oct 15 17:37:03 mercury kernel:  ? selinux_file_permission+0x145/0x170
Oct 15 17:37:03 mercury kernel:  ? security_file_permission+0x1b/0x50
Oct 15 17:37:03 mercury kernel:  vfs_read+0x2b7/0x390
Oct 15 17:37:03 mercury kernel:  ksys_read+0x64/0xe0
Oct 15 17:37:03 mercury kernel:  do_syscall_64+0x80/0x1a0
Oct 15 17:37:03 mercury kernel:  entry_SYSCALL_64_after_hwframe+0x76/0x7e
Oct 15 17:37:03 mercury kernel: RIP: 0033:0x7f03a64ac7a2
Oct 15 17:37:03 mercury kernel: RSP: 002b:00007ffe7f314ca8 EFLAGS: 00000246 ORIG_RAX: 0000000000000000
Oct 15 17:37:03 mercury kernel: RAX: ffffffffffffffda RBX: 00007f03a4ffba00 RCX: 00007f03a64ac7a2
Oct 15 17:37:03 mercury kernel: RDX: 0000000000004000 RSI: 0000557ab7d1b290 RDI: 0000000000000014
Oct 15 17:37:03 mercury kernel: RBP: 0000000000004000 R08: 0000000000000000 R09: 0000000000000000
Oct 15 17:37:03 mercury kernel: R10: 0000000000000000 R11: 0000000000000246 R12: 0000557ab7c61ba0
Oct 15 17:37:03 mercury kernel: R13: 0000000000004000 R14: 0000557ab7d1b290 R15: 0000000000000014
Oct 15 17:37:03 mercury kernel:  </TASK>
Oct 15 17:37:03 mercury kernel: task:kioworker       state:D stack:0     pid:38123 tgid:38123 ppid:4073   flags:0x00004006
Oct 15 17:37:03 mercury kernel: Call Trace:
Oct 15 17:37:03 mercury kernel:  <TASK>
Oct 15 17:37:03 mercury kernel:  __schedule+0x446/0xb80
Oct 15 17:37:03 mercury kernel:  schedule+0x21/0xf0
Oct 15 17:37:03 mercury kernel:  request_wait_answer+0xcb/0x2a0 [fuse]
Oct 15 17:37:03 mercury kernel:  ? __pfx_autoremove_wake_function+0x10/0x10
Oct 15 17:37:03 mercury kernel:  __fuse_simple_request+0xce/0x280 [fuse]
Oct 15 17:37:03 mercury kernel:  fuse_do_getattr+0x208/0x310 [fuse]
Oct 15 17:37:03 mercury kernel:  fuse_file_read_iter+0xb5/0x1f0 [fuse]
Oct 15 17:37:03 mercury kernel:  ? selinux_file_permission+0x145/0x170
Oct 15 17:37:03 mercury kernel:  ? security_file_permission+0x1b/0x50
Oct 15 17:37:03 mercury kernel:  vfs_read+0x2b7/0x390
Oct 15 17:37:03 mercury kernel:  ksys_read+0x64/0xe0
Oct 15 17:37:03 mercury kernel:  do_syscall_64+0x80/0x1a0
Oct 15 17:37:03 mercury kernel:  entry_SYSCALL_64_after_hwframe+0x76/0x7e
Oct 15 17:37:03 mercury kernel: RIP: 0033:0x7f6f190ac7a2
Oct 15 17:37:03 mercury kernel: RSP: 002b:00007fffbc613388 EFLAGS: 00000246 ORIG_RAX: 0000000000000000
Oct 15 17:37:03 mercury kernel: RAX: ffffffffffffffda RBX: 00007f6f17dfba00 RCX: 00007f6f190ac7a2
Oct 15 17:37:03 mercury kernel: RDX: 0000000000004000 RSI: 000055eaff29e880 RDI: 0000000000000014
Oct 15 17:37:03 mercury kernel: RBP: 0000000000004000 R08: 0000000000000000 R09: 0000000000000000
Oct 15 17:37:03 mercury kernel: R10: 0000000000000000 R11: 0000000000000246 R12: 000055eaff1bb320
Oct 15 17:37:03 mercury kernel: R13: 0000000000004000 R14: 000055eaff29e880 R15: 0000000000000014
Oct 15 17:37:03 mercury kernel:  </TASK>
Comment 32 Stefan 2025-11-17 12:00:44 UTC
I'm also affected by this bug (in my case xlsx files).

@flex How you have disabled the thumbnail stuff? Just unticked every file type in the preview tab of dolphin's settings dialog? This doesn't help in my case ...
Comment 33 Grzesiek11 2025-12-14 16:01:31 UTC
I am also affected, on Debian Unstable.

Would also like to know how to work around this, as disabling every preview type did not help in my case either.
Comment 34 qwrules 2026-01-07 14:16:33 UTC
I just encountered this bug when opening Dolphine. All CPU cores pegged at 100% for several minutes with this process.

Operating System: Arch Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.2-zen2-1-zen (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 40 GiB of RAM (38.9 GiB usable)
Graphics Processor: Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 20L7002AUS
System Version: ThinkPad T480s
Comment 35 mark 2026-01-13 09:52:48 UTC
Same bug, added another culprit file (too large, therefore as a link).
https://makr.zone/kde/large-svg-file-causing-kioworker-thumbnail-to-hang.svg
Comment 36 Samuel Rosenlöf 2026-02-02 12:25:06 UTC
I also have an issue with kioworker getting stuck and consuming 100% of the assigned threads. I had to open System Monitor and manually kill the processes.

This issue happens on both NTFS and ext4 file systems. They both have some Windows files (.exe, .bat, .docx) inside subfolders, which probably get parsed by the thumbnailer because I have folder previews enabled. The files are a couple of MB at most.

The only remedy I found is to disable previews for Microsoft Windows Executable files.
Comment 37 Jeff Cook 2026-02-08 19:49:42 UTC
Hi all, I have a draft merge request targeting this issue at https://invent.kde.org/frameworks/kio/-/merge_requests/2150 . It's based on the v6.22 branch and it works for me, your mileage may vary.
Comment 38 Nicolas Fella 2026-02-09 19:11:41 UTC
Git commit 9c41937fc01072218d3f7e328b585853740f1ccf by Nicolas Fella.
Committed on 09/02/2026 at 17:13.
Pushed by nicolasfella into branch 'master'.

filepreviewjob: Add timeout

If a plugin is hanging/taking too long abort the job

Co-Authored-By: Akseli Lahtinen <akselmo@akselmo.dev>

M  +37   -17   src/gui/filepreviewjob.cpp
M  +11   -0    src/gui/filepreviewjob.h

https://invent.kde.org/frameworks/kio/-/commit/9c41937fc01072218d3f7e328b585853740f1ccf
Comment 39 Cairo 2026-02-10 15:14:35 UTC
Have had the same issue in Dolphin, my remedy was to disable MLT Playlist previews. The next KDE Frameworks release is set for the 14th, so hopefully the issue goes away once those packages are released. This has been an annoying little bug, so it being fixed is a great Valentine's gift :)

Operating System: CachyOS Linux 
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 12 × 12th Gen Intel® Core™ i5-12400F
Memory: 32 GiB of RAM (31.2 GiB usable)
Graphics Processor: AMD Radeon RX 9060 XT
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7D43
System Version: 1.0
Comment 40 Akseli Lahtinen 2026-02-11 09:16:35 UTC
Everyone here reporting, let us know how the fix goes when it lands to your system! 
It should now timeout if the job for that thumbnail is taking too long. This should at the very least avoid it eating 100% CPU forever.