filepreviewjob: Add timeout

If a plugin is hanging/taking too long abort the job

BUG: 504067

Co-Authored-By: Akseli Lahtinen <akselmo@akselmo.dev>